--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="image/photo3.png" class="img-fluid" >
     </div>
     <div class="col-4 mt-3">
-        <img src="image/photo_4.png" class="img-fluid mainimg " >
+        <img src="image/photo_4.png" class="img-fluid col-lg-12" >
     </div>
      <div class="col-4 ">
         <img src="image/photo5.png" class="btm img-fluid" >
